fix silly layout issue

--- a/public/client.css
+++ b/public/client.css
@@ -76,6 +76,7 @@ img.avatar {
   left: 52%;
   top: 50px;
   bottom: 0;
+  right: 0;
   overflow: scroll;
 }
 
